--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "http://robyng.github.io/react-portfolio",
+{ "homepage": "http://robyng.github.io/my-portfolio-with-react",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
